add user roles
